--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -9,31 +9,27 @@
         Title="MainWindow"
         Height="759.019" Width="1144.62">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="10" />
+            <ColumnDefinition Width="200" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="10" />
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="10" />
+            <RowDefinition Height="0" />
             <RowDefinition Height="30" />
             <RowDefinition Height="*" />
             <RowDefinition Height="10" />
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="10" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="10" />
-        </Grid.ColumnDefinitions>
-            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" >
-            <Button Content="Merge" Command="{Binding MergeDataCommand}" Margin="5,5" HorizontalAlignment="Left" VerticalAlignment="Center" Width="75"/>
-            <Button Content="Write" Command="{Binding WriteDataCommand}" Margin="5,5" HorizontalAlignment="Left" VerticalAlignment="Center" Width="75"/>
-            <ComboBox ItemsSource="{Binding Areas}" SelectedItem="{Binding SelectedArea}" DisplayMemberPath="RegionProvince" IsEditable="True" Width="200"/>
-        </StackPanel>
-        <Grid Grid.Row="2" Grid.Column="1" >
-            <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Right" Background="LightBlue" >
-                <lvc:CartesianChart.AxisY>
-                    <lvc:Axis Title="Cases" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
-                </lvc:CartesianChart.AxisY>
-                <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Month" Labels="{Binding Labels}"></lvc:Axis>
-                </lvc:CartesianChart.AxisX>
-            </lvc:CartesianChart>
-        </Grid>
+        <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding SelectedArea.RegionProvince}" FontSize="18" />
+        <ListBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding Areas}" SelectedItem="{Binding SelectedArea}" DisplayMemberPath="RegionProvince" />
+        <lvc:CartesianChart Grid.Column="2" Grid.Row="2" Series="{Binding SeriesCollection}" LegendLocation="Right" Background="LightBlue" >
+            <lvc:CartesianChart.AxisY>
+                <lvc:Axis Title="Cases" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
+            </lvc:CartesianChart.AxisY>
+            <lvc:CartesianChart.AxisX>
+                <lvc:Axis Title="Month" Labels="{Binding Labels}"></lvc:Axis>
+            </lvc:CartesianChart.AxisX>
+        </lvc:CartesianChart>
     </Grid>
 </Window>
