--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -10,41 +10,89 @@
         Icon="/Images/coronavirus.ico"
         Height="759.019" Width="1144.62">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="10" />
-            <ColumnDefinition Width="200" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="10" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="0" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="10" />
-        </Grid.RowDefinitions>
-        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" >
-            <StackPanel Orientation="Horizontal" Margin="5,5">
-                <TextBlock Text="Act% " />
-                <TextBlock Text="{Binding ActivePct}" />
+        <Grid x:Name="ChartPanel">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="10" />
+                <ColumnDefinition Width="200" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="10" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0" />
+                <RowDefinition Height="30" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="10" />
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" >
+                <StackPanel Orientation="Horizontal" Margin="5,5">
+                    <TextBlock Text="Act% " />
+                    <TextBlock Text="{Binding ActivePct}" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5,5">
+                    <TextBlock Text="Rcv% " />
+                    <TextBlock Text="{Binding RecoveredPct}" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5,5">
+                    <TextBlock Text="Dth% " />
+                    <TextBlock Text="{Binding DeathsPct}" />
+                </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="5,5">
-                <TextBlock Text="Rcv% " />
-                <TextBlock Text="{Binding RecoveredPct}" />
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="5,5">
-                <TextBlock Text="Dth% " />
-                <TextBlock Text="{Binding DeathsPct}" />
-            </StackPanel>
-        </StackPanel>
-        <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding SelectedArea.RegionState}" HorizontalAlignment="Center" FontSize="18" />
-        <ListBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding Areas}" SelectedItem="{Binding SelectedArea}" DisplayMemberPath="RegionState" />
-        <lvc:CartesianChart Grid.Column="2" Grid.Row="2" Series="{Binding SeriesCollection}" LegendLocation="Right" Background="LightBlue" >
-            <lvc:CartesianChart.AxisY>
-                <lvc:Axis Title="Cases" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
-            </lvc:CartesianChart.AxisY>
-            <lvc:CartesianChart.AxisX>
-                <lvc:Axis Title="Month" Labels="{Binding Labels}"></lvc:Axis>
-            </lvc:CartesianChart.AxisX>
-        </lvc:CartesianChart>
+            <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding SelectedArea.RegionState}" HorizontalAlignment="Center" FontSize="18" />
+            <ListBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding Areas}" SelectedItem="{Binding SelectedArea}" DisplayMemberPath="RegionState" />
+            <lvc:CartesianChart Grid.Column="2" Grid.Row="2" Series="{Binding SeriesCollection}" LegendLocation="Right" Background="LightBlue" >
+                <lvc:CartesianChart.AxisY>
+                    <lvc:Axis Title="Cases" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
+                </lvc:CartesianChart.AxisY>
+                <lvc:CartesianChart.AxisX>
+                    <lvc:Axis Title="Month" Labels="{Binding Labels}"></lvc:Axis>
+                </lvc:CartesianChart.AxisX>
+            </lvc:CartesianChart>
+        </Grid>
+
+        <Grid x:Name="BusyPanel" Visibility="{Binding BusyPanelVisibility}">
+            <Grid Background="Black" Opacity="0.5"/>
+            <Border
+                        MinWidth="50" MinHeight="50"
+                        Background="LightSeaGreen" 
+                        BorderBrush="Black" 
+                        BorderThickness="1" 
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center">
+                <StackPanel>
+                    <StackPanel Width="280" Margin="5,5,5,5">
+                        <TextBox Text="{Binding BusyPanelTitle}" TextWrapping="Wrap" MinHeight="16" Background="LightGreen" HorizontalAlignment="Center" />
+                        <ProgressBar Visibility="Collapsed" Value="{Binding BusyProgressValue}" Minimum="{Binding BusyProgressMinimum}" Maximum="{Binding BusyProgressMaximum}" Height="20" />
+                        <TextBox Visibility="Collapsed" Text="{Binding BusyProgressText}" HorizontalAlignment="Center" TextAlignment="Center" Width="32" Background="LightGreen" />
+                        <Button Visibility="Collapsed" Content="Cancel" Command="{Binding BusyCancelCommand}" HorizontalAlignment="Center" VerticalAlignment="Top" Width="38"/>
+                    </StackPanel>
+                </StackPanel>
+            </Border>
+        </Grid>
+
+        <Grid x:Name="MessagPanel" Visibility="{Binding MessagePanelVisibility}">
+            <Grid Background="Black" Opacity="0.5"/>
+            <Border
+                        MinWidth="50" MinHeight="50"
+                        Background="LightCoral" 
+                        BorderBrush="Black" 
+                        BorderThickness="1" 
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center">
+                <StackPanel>
+                    <StackPanel Width="400" Margin="5,5,5,0">
+                        <TextBox Text="{Binding MessageTitle}" TextWrapping="Wrap" MinHeight="16" Background="LightPink" HorizontalAlignment="Center" />
+                        <TextBox Text="{Binding MessageContent}" IsReadOnly="True" TextWrapping="Wrap" MinHeight="42" Background="LightPink" HorizontalAlignment="Stretch" />
+                    </StackPanel>
+                    <DockPanel Visibility="{Binding MessageConfirmVisibilty}" >
+                        <CheckBox Content="{Binding MessageConfirmContent}" IsChecked="{Binding MessageConfirmChecked}" FontStyle="Italic" FontWeight="Bold" HorizontalAlignment="Center" />
+                    </DockPanel>
+                    <StackPanel Visibility="Visible" Orientation="Horizontal" HorizontalAlignment="Center">
+                        <Button Content="{Binding MessageResponseContent}" Command="{Binding MessageResponseCommand}" IsEnabled="{Binding MessageResponseEnabled}" Width="50" Margin="5,5" />
+                        <Button Content="No" Command="{Binding MessageCancelCommand}" Visibility="{Binding MessageNoVisibility}" Width="50" Margin="5,5" />
+                    </StackPanel>
+                </StackPanel>
+            </Border>
+        </Grid>
+
     </Grid>
 </Window>
