--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -10,7 +10,7 @@
         Icon="/Images/coronavirus.ico"
         Height="759.019" Width="1144.62">
     <Grid>
-        <Grid x:Name="ChartPanel">
+        <Grid Background="AliceBlue">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="10" />
                 <ColumnDefinition Width="200" />
@@ -23,8 +23,8 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="10" />
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock Text="{Binding SelectedReport.RegionState}" FontSize="18" VerticalAlignment="Center" />
+            <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Center" >
+                <TextBlock Text="{Binding SelectedTotalReport.RegionState}" FontSize="18" VerticalAlignment="Center" />
                 <TextBlock Text=" -- " FontSize="18" VerticalAlignment="Center" />
                 <StackPanel Orientation="Horizontal" Margin="5,5" >
                     <TextBlock Text="Act% " FontSize="18" VerticalAlignment="Center" />
@@ -39,8 +39,11 @@
                     <TextBlock Text="{Binding DeathsPct}" FontSize="18" VerticalAlignment="Center" />
                 </StackPanel>
             </StackPanel>
-            <ListBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding TotalReports}" SelectedItem="{Binding SelectedReport}" DisplayMemberPath="RegionState" />
-            <lvc:CartesianChart Grid.Column="2" Grid.Row="2" Series="{Binding SeriesCollection}" LegendLocation="Right" Background="LightBlue" >
+            <ComboBox Grid.Row="1" Grid.Column="1" Margin="5,5" ItemsSource="{Binding ViewSelections}" SelectedIndex="{Binding ViewIndex}" />
+            <ListBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding TotalReports}" SelectedItem="{Binding SelectedTotalReport}" DisplayMemberPath="RegionState" />
+
+            <lvc:CartesianChart x:Name="ChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding LineChartVisibility}"
+                                Series="{Binding SeriesCollection}" LegendLocation="Right" Background="LightBlue" >
                 <lvc:CartesianChart.AxisY>
                     <lvc:Axis Title="Cases" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
                 </lvc:CartesianChart.AxisY>
@@ -48,6 +51,28 @@
                     <lvc:Axis Title="Month" Labels="{Binding Labels}"></lvc:Axis>
                 </lvc:CartesianChart.AxisX>
             </lvc:CartesianChart>
+
+            <Grid x:Name="BarChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding BarChartVisibility}"  Background="Coral" >
+            </Grid>
+
+            <DataGrid x:Name="DataGridPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding DataGridVisibility}"
+                      ItemsSource="{Binding RegionDailyReports}"
+                      SelectedItem="{Binding SelectedDailyReport}"
+                      AutoGenerateColumns="False"
+                      IsReadOnly="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Region" Binding="{Binding Region}" />
+                    <DataGridTextColumn Header="State" Binding="{Binding State}" />
+                    <DataGridTextColumn Header="Confirmed" Binding="{Binding TotalConfirmed}" />
+                    <DataGridTextColumn Header="New" Binding="{Binding NewConfirmed}" />
+                    <DataGridTextColumn Header="Recovered" Binding="{Binding TotalRecovered}" />
+                    <DataGridTextColumn Header="New" Binding="{Binding NewRecovered}" />
+                    <DataGridTextColumn Header="Deaths" Binding="{Binding TotalDeaths}" />
+                    <DataGridTextColumn Header="New" Binding="{Binding NewDeaths}" />
+                    <DataGridTextColumn Header="Date" Binding="{Binding RecordDate, StringFormat=\{0:MM/dd/yyyy\}}" />
+                </DataGrid.Columns>
+            </DataGrid>
+
         </Grid>
 
         <Grid x:Name="BusyPanel" Visibility="{Binding BusyPanelVisibility}">
