--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -44,16 +44,23 @@
 
             <lvc:CartesianChart x:Name="ChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding LineChartVisibility}"
                                 Series="{Binding SeriesCollection}" LegendLocation="Right" Background="LightBlue" >
-                <lvc:CartesianChart.AxisY>
-                    <lvc:Axis Title="Cases" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
-                </lvc:CartesianChart.AxisY>
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Month" Labels="{Binding Labels}"></lvc:Axis>
+                    <lvc:Axis Title="Month" Labels="{Binding Labels}" />
                 </lvc:CartesianChart.AxisX>
+                <lvc:CartesianChart.AxisY>
+                    <lvc:Axis Title="Cases" LabelFormatter="{Binding Formatter}" />
+                </lvc:CartesianChart.AxisY>
             </lvc:CartesianChart>
 
-            <Grid x:Name="BarChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding BarChartVisibility}"  Background="Coral" >
-            </Grid>
+            <!--<lvc:CartesianChart x:Name="BarChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding BarChartVisibility}"
+                            Series="{Binding SeriesCollection}" LegendLocation="Right" Background="LightCoral">
+                <lvc:CartesianChart.AxisX>
+                    <lvc:Axis Title="Month" Labels="{Binding Labels}" />
+                </lvc:CartesianChart.AxisX>
+                <lvc:CartesianChart.AxisY>
+                    <lvc:Axis Title="Cases" LabelFormatter="{Binding Formatter}" />
+                </lvc:CartesianChart.AxisY>
+            </lvc:CartesianChart>-->
 
             <DataGrid x:Name="DataGridPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding DataGridVisibility}"
                       ItemsSource="{Binding RegionDailyReports}"
