--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -45,7 +45,7 @@
             <lvc:CartesianChart x:Name="ChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding LineChartVisibility}"
                                 Series="{Binding LineSeriesCollection}" LegendLocation="Right" Background="LightBlue" >
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Month" Labels="{Binding LineLabels}" />
+                    <lvc:Axis Title="Date" Labels="{Binding LineLabels}" />
                 </lvc:CartesianChart.AxisX>
                 <lvc:CartesianChart.AxisY>
                     <lvc:Axis Title="Cases" LabelFormatter="{Binding LineFormatter}" />
@@ -55,7 +55,7 @@
             <lvc:CartesianChart x:Name="BarChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding BarChartVisibility}"
                             Series="{Binding BarSeriesCollection}" LegendLocation="Right" Background="LightBlue">
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Month" Labels="{Binding BarLabels}" />
+                    <lvc:Axis Title="Date" Labels="{Binding BarLabels}" />
                 </lvc:CartesianChart.AxisX>
                 <lvc:CartesianChart.AxisY>
                     <lvc:Axis Title="Cases" LabelFormatter="{Binding BarFormatter}" />
