--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -24,10 +24,10 @@
                 <RowDefinition Height="10" />
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Center" >
-                <TextBlock Text="{Binding SelectedTotalReport.RegionState}" FontSize="18" VerticalAlignment="Center" />
+                <TextBlock Text="{Binding SelectedTotalReport.DisplayName}" FontSize="18" VerticalAlignment="Center" />
             </StackPanel>
             <ComboBox Grid.Row="1" Grid.Column="1" Margin="5,5" ItemsSource="{Binding ViewSelections}" SelectedIndex="{Binding ViewIndex}" />
-            <ListBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding TotalReports}" SelectedItem="{Binding SelectedTotalReport}" DisplayMemberPath="RegionState" />
+            <ListBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding TotalReports}" SelectedItem="{Binding SelectedTotalReport}" DisplayMemberPath="DisplayName" />
 
             <lvc:CartesianChart x:Name="ChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding LineChartVisibility}"
                                 Series="{Binding LineSeriesCollection}" LegendLocation="Right" Background="LightBlue" >
@@ -50,13 +50,14 @@
             </lvc:CartesianChart>
 
             <DataGrid x:Name="DataGridPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding DataGridVisibility}"
-                      ItemsSource="{Binding RegionDailyReports}"
+                      ItemsSource="{Binding CountryDailyReports}"
                       SelectedItem="{Binding SelectedDailyReport}"
                       AutoGenerateColumns="False"
                       IsReadOnly="True">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Region" Binding="{Binding Region}" />
+                    <DataGridTextColumn Header="Country" Binding="{Binding Country}" />
                     <DataGridTextColumn Header="State" Binding="{Binding State}" />
+                    <DataGridTextColumn Header="County" Binding="{Binding County}" />
                     <DataGridTextColumn Header="Confirmed" Binding="{Binding TotalConfirmed}" />
                     <DataGridTextColumn Header="New" Binding="{Binding NewConfirmed}" />
                     <DataGridTextColumn Header="Recovered" Binding="{Binding TotalRecovered}" />
