--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -79,13 +79,11 @@
                         BorderThickness="1" 
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center">
-                <StackPanel>
-                    <StackPanel Width="280" Margin="5,5,5,5" >
-                        <TextBox Text="{Binding BusyPanelTitle}" TextWrapping="Wrap" MinHeight="16" Background="LightGreen" HorizontalAlignment="Center" />
-                        <ProgressBar Visibility="Collapsed" Value="{Binding BusyProgressValue}" Minimum="{Binding BusyProgressMinimum}" Maximum="{Binding BusyProgressMaximum}" Height="20" />
-                        <TextBox Visibility="Collapsed" Text="{Binding BusyProgressText}" HorizontalAlignment="Center" TextAlignment="Center" Width="32" Background="LightGreen" />
-                        <Button Visibility="Collapsed" Content="Cancel" Command="{Binding BusyCancelCommand}" HorizontalAlignment="Center" VerticalAlignment="Top" Width="38"/>
-                    </StackPanel>
+                <StackPanel Width="280" Margin="5,5,5,5" VerticalAlignment="Center" Background="LightGreen" >
+                    <TextBox Text="{Binding BusyPanelTitle}" TextWrapping="Wrap" MinHeight="16" HorizontalAlignment="Center" Background="Transparent" BorderBrush="Transparent" />
+                    <!--<ProgressBar Visibility="Collapsed" Value="{Binding BusyProgressValue}" Minimum="{Binding BusyProgressMinimum}" Maximum="{Binding BusyProgressMaximum}" Height="20" />-->
+                    <!--<TextBox Visibility="Collapsed" Text="{Binding BusyProgressText}" HorizontalAlignment="Center" TextAlignment="Center" Width="32" />-->
+                    <!--<Button Visibility="Collapsed" Content="Cancel" Command="{Binding BusyCancelCommand}" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="38"/>-->
                 </StackPanel>
             </Border>
         </Grid>
