--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -26,7 +26,14 @@
             <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Center" >
                 <TextBlock Text="{Binding SelectedTotalReport.DisplayName}" FontSize="18" VerticalAlignment="Center" />
             </StackPanel>
-            <ComboBox Grid.Row="1" Grid.Column="1" Margin="5,5" ItemsSource="{Binding ViewSelections}" SelectedIndex="{Binding ViewIndex}" />
+            <Grid  Grid.Row="1" Grid.Column="1" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="100" />
+                </Grid.ColumnDefinitions>
+                <ComboBox Grid.Column="0" ItemsSource="{Binding ViewSelections}" SelectedIndex="{Binding ViewIndex}" Margin="5,5" />
+                <Button Grid.Column="1" Content="Refresh Data" Command="{Binding RefreshDataCommand}" Margin="5,5"/>
+            </Grid>
             <ListBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding TotalReports}" SelectedItem="{Binding SelectedTotalReport}" DisplayMemberPath="DisplayName" />
 
             <lvc:CartesianChart x:Name="ChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding LineChartVisibility}"
