Refactored to include both FileDate and LastUpdate for completeness; added code to generate country-only entries when they're not in the data; removed unused classes DailyFileData and DailyFileDataFips;

--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -73,7 +73,7 @@
                     <DataGridTextColumn Header="New" Binding="{Binding NewRecovered}" />
                     <DataGridTextColumn Header="Deaths" Binding="{Binding TotalDeaths}" />
                     <DataGridTextColumn Header="New" Binding="{Binding NewDeaths}" />
-                    <DataGridTextColumn Header="Date" Binding="{Binding RecordDate, StringFormat=\{0:MM/dd/yyyy\}}" />
+                    <DataGridTextColumn Header="Date" Binding="{Binding FileDate, StringFormat=\{0:MM/dd/yyyy\}}" />
                 </DataGrid.Columns>
             </DataGrid>
 
