--- a/WpfViewer/Views/App.xaml
+++ b/WpfViewer/Views/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WpfViewer.App"
+﻿<Application x:Class="Viewer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfViewer"
+             xmlns:local="clr-namespace:Viewer"
              StartupUri="Views\MainWindow.xaml">
     <Application.Resources>
     </Application.Resources>
