--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="WpfViewer.MainWindow"
+﻿<Window x:Class="Viewer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfViewer"
+        xmlns:local="clr-namespace:Viewer"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
-        Title="MainWindow"
+        Title="Virus Viewer"
         Icon="/Images/coronavirus.ico"
         Height="759.019" Width="1144.62">
     <Grid>
