--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -29,14 +29,14 @@
             <Grid  Grid.Row="1" Grid.Column="1" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="90" />
+                    <ColumnDefinition Width="60" />
                 </Grid.ColumnDefinitions>
-                <ComboBox Grid.Column="0" ItemsSource="{Binding ViewSelections}" SelectedIndex="{Binding ViewIndex}" Margin="5,5" />
-                <Button Grid.Column="1" Content="Refresh Data" Command="{Binding RefreshDataCommand}" Margin="5,5"/>
+                <ComboBox Grid.Column="0" ItemsSource="{Binding ViewSelections}" SelectedItem="{Binding SelectedView}" DisplayMemberPath="DisplayName" Margin="2,5" />
+                <Button Grid.Column="1" Content="Refresh" Command="{Binding RefreshDataCommand}" Margin="2,5"/>
             </Grid>
             <ListBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding TotalReports}" SelectedItem="{Binding SelectedTotalReport}" DisplayMemberPath="DisplayName" />
 
-            <lvc:CartesianChart x:Name="ChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding LineChartVisibility}"
+            <lvc:CartesianChart x:Name="SeriesChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding SeriesChartVisibility}"
                                 Series="{Binding LineSeriesCollection}" LegendLocation="Right" Background="LightBlue" >
                 <lvc:CartesianChart.AxisX>
                     <lvc:Axis Title="Date" Labels="{Binding LineLabels}" />
@@ -46,7 +46,7 @@
                 </lvc:CartesianChart.AxisY>
             </lvc:CartesianChart>
 
-            <lvc:CartesianChart x:Name="BarChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding BarChartVisibility}"
+            <lvc:CartesianChart x:Name="ColumnChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding ColumnChartVisibility}"
                             Series="{Binding BarSeriesCollection}" LegendLocation="Right" Background="LightBlue">
                 <lvc:CartesianChart.AxisX>
                     <lvc:Axis Title="Date" Labels="{Binding BarLabels}" />
