--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -24,7 +24,8 @@
                 <RowDefinition Height="10" />
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Center" >
-                <TextBlock Text="{Binding SelectedTotalReport.DisplayName}" FontSize="18" VerticalAlignment="Center" />
+                <TextBlock Text="{Binding SelectedTotalReport.DisplayName}" FontSize="18" VerticalAlignment="Center" Margin="5,5" />
+                <TextBlock Text="{Binding SelectedView.ChartName}" FontSize="18" VerticalAlignment="Center" Margin="5,5"/>
             </StackPanel>
             <Grid  Grid.Row="1" Grid.Column="1" >
                 <Grid.ColumnDefinitions>
