--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -5,10 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Viewer"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+        xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
         mc:Ignorable="d"
         Title="Virus Viewer"
         Icon="/Images/coronavirus.ico"
         Height="759.019" Width="1144.62">
+    <Window.Resources>
+        <CollectionViewSource x:Key="TotalReportsView" Source="{Binding TotalReports}">
+            <CollectionViewSource.SortDescriptions>
+                <scm:SortDescription PropertyName="Country" />
+                <scm:SortDescription PropertyName="State" />
+            </CollectionViewSource.SortDescriptions>
+        </CollectionViewSource>
+    </Window.Resources>
     <Grid>
         <Grid Background="LightSteelBlue">
             <Grid.ColumnDefinitions>
@@ -36,6 +45,7 @@
                 <Button Grid.Column="1" Content="Refresh" Command="{Binding RefreshDataCommand}" Margin="2,5"/>
             </Grid>
             <ListBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding TotalReports}" SelectedItem="{Binding SelectedTotalReport}" DisplayMemberPath="DisplayName" />
+            <!--<ListBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Source={StaticResource TotalReportsView}}" SelectedItem="{Binding SelectedTotalReport}" DisplayMemberPath="DisplayName" />-->
 
             <lvc:CartesianChart x:Name="SeriesChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding SeriesChartVisibility}"
                                 Series="{Binding LineSeriesCollection}" LegendLocation="Right" Background="LightBlue" >
