Code restructure; moved some DB code into DailyReports from MainVM; added check of Replacement.csv date for whether to refresh or not

--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -68,7 +68,7 @@
             </lvc:CartesianChart>
 
             <DataGrid x:Name="DataGridPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding DataGridVisibility}"
-                      ItemsSource="{Binding CountryDailyReports}"
+                      ItemsSource="{Binding DailyTotalReports}"
                       SelectedItem="{Binding SelectedDailyReport}"
                       AutoGenerateColumns="False"
                       IsReadOnly="True"
