Added CollectionViewSource for DataGrid to sort FileDate descending

--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -17,6 +17,13 @@
                 <scm:SortDescription PropertyName="State" />
             </CollectionViewSource.SortDescriptions>
         </CollectionViewSource>
+        <CollectionViewSource x:Key="DailyTotalsView" Source="{Binding DailyTotalReports}" >
+            <CollectionViewSource.SortDescriptions>
+                <scm:SortDescription PropertyName="Country" Direction="Ascending" />
+                <scm:SortDescription PropertyName="State" Direction="Ascending" />
+                <scm:SortDescription PropertyName="FileDate" Direction="Descending" />
+            </CollectionViewSource.SortDescriptions>
+        </CollectionViewSource>
     </Window.Resources>
     <Grid>
         <Grid Background="LightSteelBlue">
@@ -44,8 +51,10 @@
                 <ComboBox Grid.Column="0" ItemsSource="{Binding ViewSelections}" SelectedItem="{Binding SelectedView}" DisplayMemberPath="DisplayName" Margin="2,5" />
                 <Button Grid.Column="1" Content="Refresh" Command="{Binding RefreshDataCommand}" Margin="2,5"/>
             </Grid>
-            <ListBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding TotalReports}" SelectedItem="{Binding SelectedTotalReport}" DisplayMemberPath="DisplayName" />
-            <!--<ListBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Source={StaticResource TotalReportsView}}" SelectedItem="{Binding SelectedTotalReport}" DisplayMemberPath="DisplayName" />-->
+            <ListBox Grid.Row="2" Grid.Column="1" 
+                     ItemsSource="{Binding Source={StaticResource TotalReportsView}}" 
+                     SelectedItem="{Binding SelectedTotalReport}" 
+                     DisplayMemberPath="DisplayName" />
 
             <lvc:CartesianChart x:Name="SeriesChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding SeriesChartVisibility}"
                                 Series="{Binding LineSeriesCollection}" LegendLocation="Right" Background="LightBlue" >
@@ -68,7 +77,7 @@
             </lvc:CartesianChart>
 
             <DataGrid x:Name="DataGridPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding DataGridVisibility}"
-                      ItemsSource="{Binding DailyTotalReports}"
+                      ItemsSource="{Binding Source={StaticResource DailyTotalsView}}"
                       SelectedItem="{Binding SelectedDailyReport}"
                       AutoGenerateColumns="False"
                       IsReadOnly="True"
