--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -58,7 +58,10 @@
                      ItemsSource="{Binding Source={StaticResource TotalReportsView}}" 
                      SelectedItem="{Binding SelectedTotalReport}" 
                      DisplayMemberPath="DisplayName" />
-
+            <!--<ListBox Grid.Row="2" Grid.Column="1" 
+                     ItemsSource="{Binding TotalReports}" 
+                     SelectedItem="{Binding SelectedTotalReport}" 
+                     DisplayMemberPath="DisplayName" />-->
             <lvc:CartesianChart x:Name="SeriesChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding SeriesChartVisibility}"
                                 Series="{Binding LineSeriesCollection}" LegendLocation="Right" Background="LightBlue" >
                 <lvc:CartesianChart.AxisX>
