--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -5,26 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Viewer"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-        xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
         mc:Ignorable="d"
         Title="Virus Viewer"
         Icon="/Images/coronavirus.ico"
         Height="759.019" Width="1144.62">
-    <Window.Resources>
-        <CollectionViewSource x:Key="TotalReportsView" Source="{Binding TotalReports}">
-            <CollectionViewSource.SortDescriptions>
-                <scm:SortDescription PropertyName="Country" />
-                <scm:SortDescription PropertyName="State" />
-            </CollectionViewSource.SortDescriptions>
-        </CollectionViewSource>
-        <CollectionViewSource x:Key="DailyTotalsView" Source="{Binding DailyTotalReports}" >
-            <CollectionViewSource.SortDescriptions>
-                <scm:SortDescription PropertyName="Country" Direction="Ascending" />
-                <scm:SortDescription PropertyName="State" Direction="Ascending" />
-                <scm:SortDescription PropertyName="FileDate" Direction="Descending" />
-            </CollectionViewSource.SortDescriptions>
-        </CollectionViewSource>
-    </Window.Resources>
     <Grid>
         <Grid Background="LightSteelBlue">
             <Grid.ColumnDefinitions>
@@ -49,19 +33,15 @@
                     <ColumnDefinition Width="60" />
                 </Grid.ColumnDefinitions>
                 <ComboBox Grid.Column="0" Margin="2,5"
-                          ItemsSource="{Binding ViewSelections}" 
-                          SelectedItem="{Binding SelectedView}" 
-                          DisplayMemberPath="DisplayName" />
+                    ItemsSource="{Binding ViewSelections}" 
+                    SelectedItem="{Binding SelectedView}" 
+                    DisplayMemberPath="DisplayName" />
                 <Button Grid.Column="1" Content="Refresh" Command="{Binding RefreshDataCommand}" Margin="2,5"/>
             </Grid>
             <ListBox Grid.Row="2" Grid.Column="1" 
-                     ItemsSource="{Binding Source={StaticResource TotalReportsView}}" 
-                     SelectedItem="{Binding SelectedTotalReport}" 
-                     DisplayMemberPath="DisplayName" />
-            <!--<ListBox Grid.Row="2" Grid.Column="1" 
-                     ItemsSource="{Binding TotalReports}" 
-                     SelectedItem="{Binding SelectedTotalReport}" 
-                     DisplayMemberPath="DisplayName" />-->
+		        ItemsSource="{Binding TotalReportsView.View}" 
+		        SelectedItem="{Binding SelectedTotalReport}" 
+		        DisplayMemberPath="DisplayName" />
             <lvc:CartesianChart x:Name="SeriesChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding SeriesChartVisibility}"
                                 Series="{Binding LineSeriesCollection}" LegendLocation="Right" Background="LightBlue" >
                 <lvc:CartesianChart.AxisX>
@@ -83,12 +63,11 @@
             </lvc:CartesianChart>
 
             <DataGrid x:Name="DataGridPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding DataGridVisibility}"
-                      ItemsSource="{Binding Source={StaticResource DailyTotalsView}}"
-                      SelectedItem="{Binding SelectedDailyReport}"
-                      AutoGenerateColumns="False"
-                      IsReadOnly="True"
-                      ClipboardCopyMode="IncludeHeader"
-                      >
+		        ItemsSource="{Binding DailyTotalsView.View}"
+		        SelectedItem="{Binding SelectedDailyReport}"
+		        AutoGenerateColumns="False"
+		        IsReadOnly="True"
+		        ClipboardCopyMode="IncludeHeader" >
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Country" Binding="{Binding Country}" />
                     <DataGridTextColumn Header="State" Binding="{Binding State}" />
