--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:Viewer"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
+        Loaded="Window_Loaded"
         Title="Virus Viewer"
         Icon="/Images/coronavirus.ico"
         Height="759.019" Width="1144.62">
