Changed listbox to show Country,State combos in gray instead of black

--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -49,8 +49,13 @@
             </Grid>
             <ListBox Grid.Row="2" Grid.Column="1" 
 		        ItemsSource="{Binding TotalReportsView.View}" 
-		        SelectedItem="{Binding SelectedTotalReport}" 
-		        DisplayMemberPath="DisplayName" />
+		        SelectedItem="{Binding SelectedTotalReport}" >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding DisplayName}" Foreground="{Binding ItemForeColor}" Background="{Binding ItemBackColor}" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
             <lvc:CartesianChart x:Name="SeriesChartPanel" Grid.Column="2" Grid.Row="2" Visibility="{Binding SeriesChartVisibility}"
                                 Series="{Binding LineSeriesCollection}" LegendLocation="Right" Background="LightBlue" >
                 <lvc:CartesianChart.AxisX>
