--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Viewer"
-        xmlns:uc="clr-namespace:Common.UserControls;assembly=Common"
+        xmlns:uc="clr-namespace:Common.UserControls;assembly=WpfLibrary"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
         Loaded="Window_Loaded"
